code for fine-tuning

--- a/Fine_Tune_RoBERTa.ipynb
+++ b/Fine_Tune_RoBERTa.ipynb
@@ -24,13 +24,231 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df= pd.read_csv('/content/drive/MyDrive/Master/active_learning2.csv')\n",
+    "df= pd.read_csv('/RoBERTa_fine_tuning.csv')\n",
     "df['textOriginal'] = df['textOriginal'].astype(str)\n",
     "df['sentiment'] = df['sentiment'].apply(lambda x: 1 if x > 0 else 0 if x <= 0 else x)\n",
     "df['title'] = df['title'].astype(str)\n",
     "df['video_or_channel'] = df['video_or_channel'].astype(int)\n",
     "df = df.dropna(subset='sentiment')\n",
     "df['comment'] = \"[CHANNEL]\" +df['channel_name'] + \"[COMMENT] \" + df['textOriginal'] + \" [TITLE] \" + df['title']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SPECIAL_TOKENS = {\n",
+    "    'channel': '[CHANNEL]',\n",
+    "    'comment': '[COMMENT]',\n",
+    "    'title': '[TITLE]'\n",
+    "}\n",
+    "\n",
+    "tokenizer = RobertaTokenizer.from_pretrained(\"roberta-base\")\n",
+    "tokenizer.add_special_tokens({'additional_special_tokens': list(SPECIAL_TOKENS.values())})\n",
+    "\n",
+    "\n",
+    "df['comment'] = (\n",
+    "    f\"{SPECIAL_TOKENS['channel']}\" + df['channel_name'] +\n",
+    "    f\"{SPECIAL_TOKENS['comment']}\" + df['textOriginal'] +\n",
+    "    f\"{SPECIAL_TOKENS['title']}\" + df['title']\n",
+    ")\n",
+    "\n",
+    "MAX_SEQ_LEN = 512\n",
+    "BATCH_SIZE = 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TextDataset(Dataset):\n",
+    "    def __init__(self, dataframe, tokenizer, max_seq_len):\n",
+    "        self.data = dataframe\n",
+    "        self.tokenizer = tokenizer\n",
+    "        self.max_seq_len = max_seq_len\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        text = self.data.iloc[index].comment\n",
+    "        label = self.data.iloc[index].video_or_channel\n",
+    "        encoding = self.tokenizer.encode_plus(\n",
+    "            text,\n",
+    "            add_special_tokens=True,\n",
+    "            max_length=self.max_seq_len,\n",
+    "            padding='max_length',\n",
+    "            truncation=True,\n",
+    "            return_attention_mask=True,\n",
+    "            return_tensors='pt'\n",
+    "        )\n",
+    "        input_ids = encoding['input_ids'].flatten()\n",
+    "        attention_mask = encoding['attention_mask'].flatten()\n",
+    "\n",
+    "        return {\n",
+    "            'input_ids': input_ids,\n",
+    "            'attention_mask': attention_mask,\n",
+    "            'label': torch.tensor(label, dtype=torch.long)\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df, temp_df = train_test_split(df, test_size=0.3, stratify=df.video_or_channel)\n",
+    "valid_df, test_df = train_test_split(temp_df, test_size=0.5, stratify=temp_df.video_or_channel)\n",
+    "\n",
+    "train_dataset = TextDataset(train_df, tokenizer, MAX_SEQ_LEN)\n",
+    "valid_dataset = TextDataset(valid_df, tokenizer, MAX_SEQ_LEN)\n",
+    "test_dataset = TextDataset(test_df, tokenizer, MAX_SEQ_LEN)\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "valid_loader = DataLoader(valid_dataset, batch_size=BATCH_SIZE)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "model = RobertaForSequenceClassification.from_pretrained('roberta-base', num_labels=2)\n",
+    "model.resize_token_embeddings(len(tokenizer))\n",
+    "model = model.to(device)\n",
+    "\n",
+    "optimizer = AdamW(model.parameters(), lr=2e-5, eps=1e-8)\n",
+    "class_weights = torch.tensor([1.0, 3.3]).to(device)\n",
+    "criterion = torch.nn.BCEWithLogitsLoss(weight=class_weights)\n",
+    "\n",
+    "os.environ['CUDA_LAUNCH_BLOCKING'] = '1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EPOCHS = 7\n",
+    "total_steps = len(train_loader) * EPOCHS\n",
+    "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=10000, num_training_steps=total_steps)\n",
+    "best_val_precision = 0.0\n",
+    "best_threshold = 0.6\n",
+    "early_stopping_threshold = 0.27\n",
+    "\n",
+    "for epoch in range(EPOCHS):\n",
+    "    model.train()\n",
+    "    total_loss = 0\n",
+    "    for batch in train_loader:\n",
+    "        optimizer.zero_grad()\n",
+    "        input_ids = batch['input_ids'].to(device)\n",
+    "        attention_mask = batch['attention_mask'].to(device)\n",
+    "        labels = batch['label'].to(device).float()\n",
+    "        labels = labels.unsqueeze(1).expand(-1, 2)\n",
+    "        outputs = model(input_ids=input_ids, attention_mask=attention_mask)\n",
+    "        logits = outputs.logits\n",
+    "        loss = criterion(logits, labels)\n",
+    "        total_loss += loss.item()\n",
+    "        loss.backward()\n",
+    "        torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
+    "        optimizer.step()\n",
+    "        scheduler.step()\n",
+    "\n",
+    "    avg_train_loss = total_loss / len(train_loader)\n",
+    "    print(f'Epoch {epoch+1}/{EPOCHS} - Training loss: {avg_train_loss}')\n",
+    "\n",
+    "    model.eval()\n",
+    "    total_val_loss = 0\n",
+    "    val_preds = []\n",
+    "    val_labels = []\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for batch in valid_loader:\n",
+    "            input_ids = batch['input_ids'].to(device)\n",
+    "            attention_mask = batch['attention_mask'].to(device)\n",
+    "            labels = batch['label'].to(device).float()\n",
+    "            labels = labels.unsqueeze(1).expand(-1, 2)\n",
+    "            outputs = model(input_ids=input_ids, attention_mask=attention_mask)\n",
+    "            logits = outputs.logits\n",
+    "            loss = criterion(logits, labels)\n",
+    "            total_val_loss += loss.item()\n",
+    "            pred_probs = torch.nn.functional.softmax(logits, dim=1)\n",
+    "            val_preds.append(pred_probs.cpu().numpy())\n",
+    "            val_labels.append(labels.cpu().numpy())\n",
+    "\n",
+    "    avg_val_loss = total_val_loss / len(valid_loader)\n",
+    "    val_preds = np.concatenate(val_preds, axis=0)\n",
+    "    val_labels = np.concatenate(val_labels, axis=0)\n",
+    "\n",
+    "    val_preds_binary = (val_preds[:, 1] > best_threshold).astype(int)\n",
+    "    val_labels_binary = (val_labels[:, 1]).astype(int)\n",
+    "\n",
+    "    precision = precision_score(val_labels_binary, val_preds_binary)\n",
+    "    recall = recall_score(val_labels_binary, val_preds_binary)\n",
+    "    f1 = f1_score(val_labels_binary, val_preds_binary)\n",
+    "\n",
+    "    print(f'Epoch {epoch+1}/{EPOCHS} - Validation loss: {avg_val_loss}, Precision: {precision}, Recall: {recall}, F1 Score: {f1}')\n",
+    "\n",
+    "    if precision > best_val_precision:\n",
+    "        best_val_precision = precision\n",
+    "        torch.save(model.state_dict(), 'best_model_state.bin')\n",
+    "\n",
+    "    if avg_val_loss < early_stopping_threshold:\n",
+    "        print(\"Early stopping triggered\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "predictions, true_labels = [], []\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for batch in test_loader:\n",
+    "        input_ids = batch['input_ids'].to(device)\n",
+    "        attention_mask = batch['attention_mask'].to(device)\n",
+    "        labels = batch['label'].to(device)\n",
+    "        outputs = model(input_ids=input_ids, attention_mask=attention_mask)\n",
+    "        logits = outputs.logits\n",
+    "        preds = torch.argmax(logits, dim=1).flatten()\n",
+    "\n",
+    "        predictions.extend(preds.cpu().numpy())\n",
+    "        true_labels.extend(labels.cpu().numpy())\n",
+    "\n",
+    "accuracy = accuracy_score(true_labels, predictions)\n",
+    "recall = recall_score(true_labels, predictions)\n",
+    "f1 = f1_score(true_labels, predictions)\n",
+    "cm = confusion_matrix(true_labels, predictions)\n",
+    "\n",
+    "print(f'Accuracy: {accuracy}')\n",
+    "print(f'Recall: {recall}')\n",
+    "print(f'F1 Score: {f1}')\n",
+    "print('Confusion Matrix:')\n",
+    "print(cm)\n",
+    "\n",
+    "print(classification_report(true_labels, predictions, target_names=['Class 0', 'Class 1']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model, '/content/drive/MyDrive/Master/model_RoBERTa')"
    ]
   }
  ],
