--- a/Fine_Tune_RoBERTa.ipynb
+++ b/Fine_Tune_RoBERTa.ipynb
@@ -15,7 +15,7 @@
     "from torch.utils.data import DataLoader, Dataset\n",
     "from transformers import RobertaTokenizer, RobertaModel, RobertaForSequenceClassification, AdamW, get_linear_schedule_with_warmup\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, recall_score, f1_score, confusion_matrix, classification_report, precision_score"
+    "from sklearn.metrics import accuracy_score, recall_score, f1_score, confusion_matrix, classification_report, precision_score\n"
    ]
   },
   {
@@ -30,7 +30,7 @@
     "df['title'] = df['title'].astype(str)\n",
     "df['video_or_channel'] = df['video_or_channel'].astype(int)\n",
     "df = df.dropna(subset='sentiment')\n",
-    "df['comment'] = \"[CHANNEL]\" +df['channel_name'] + \"[COMMENT] \" + df['textOriginal'] + \" [TITLE] \" + df['title']"
+    "df['comment'] = \"[CHANNEL]\" +df['channel_name'] + \"[COMMENT] \" + df['textOriginal'] + \" [TITLE] \" + df['title']\n"
    ]
   },
   {
@@ -56,7 +56,7 @@
     ")\n",
     "\n",
     "MAX_SEQ_LEN = 512\n",
-    "BATCH_SIZE = 16"
+    "BATCH_SIZE = 16\n"
    ]
   },
   {
@@ -93,7 +93,8 @@
     "            'input_ids': input_ids,\n",
     "            'attention_mask': attention_mask,\n",
     "            'label': torch.tensor(label, dtype=torch.long)\n",
-    "        }"
+    "        }\n",
+    "    "
    ]
   },
   {
@@ -111,7 +112,7 @@
     "\n",
     "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "valid_loader = DataLoader(valid_dataset, batch_size=BATCH_SIZE)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=BATCH_SIZE)"
+    "test_loader = DataLoader(test_dataset, batch_size=BATCH_SIZE)\n"
    ]
   },
   {
@@ -129,7 +130,7 @@
     "class_weights = torch.tensor([1.0, 3.3]).to(device)\n",
     "criterion = torch.nn.BCEWithLogitsLoss(weight=class_weights)\n",
     "\n",
-    "os.environ['CUDA_LAUNCH_BLOCKING'] = '1'"
+    "os.environ['CUDA_LAUNCH_BLOCKING'] = '1'\n"
    ]
   },
   {
@@ -204,7 +205,7 @@
     "\n",
     "    if avg_val_loss < early_stopping_threshold:\n",
     "        print(\"Early stopping triggered\")\n",
-    "        break"
+    "        break\n"
    ]
   },
   {
@@ -239,7 +240,7 @@
     "print('Confusion Matrix:')\n",
     "print(cm)\n",
     "\n",
-    "print(classification_report(true_labels, predictions, target_names=['Class 0', 'Class 1']))"
+    "print(classification_report(true_labels, predictions, target_names=['Class 0', 'Class 1']))\n"
    ]
   },
   {
@@ -248,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model, '/content/drive/MyDrive/Master/model_RoBERTa')"
+    "torch.save(model, '/content/drive/MyDrive/Master/model_RoBERTa')\n"
    ]
   }
  ],
